--- a/templates/game.html
+++ b/templates/game.html
@@ -12,6 +12,25 @@
   Give me a noun: <input type="text" name="noun"><br>
   Give me a person: <input type="text" name="people"><br>
   Give me an adjective: <input type="text" name="adjective"><br>
+
+  Pick some funky words?
+  <input type="checkbox" name="funkywords" value="spikey" id="spikey-word">
+  <label for="spikey-word">spikey</label>
+
+  <input type="checkbox" name="funkywords" value="gorgonzola" id="gorgonzola-word">
+  <label for="gorgonzola-word">gorgonzola</label>
+
+  <input type="checkbox" name="funkywords" value="zenith" id="zenith-word">
+  <label for="zenith-word">zenith</label>
+  <br>
+
+  <label for="quality-select">Select a quality in a person:</label>
+  <select name="quality" id="quality-select">
+    <option value="kind">Kind</option>
+    <option value="upside-down">Upside down</option>
+    <option value="nonsensical">Nonsensical</option>
+  </select>
+
   <input type="submit">
 </form>
 
